# HLCD-Researches

./: .editorconfig  .gitattributes  .gitignore  README.md
ChessApp/src/RustMacros/: Cargo.toml  ReadMe.md
ChessApp/src/RustMacros/hlcd/: Cargo.toml
ChessApp/src/RustMacros/hlcd/src/: component.rs  hlcd.rs  interface.rs  lib.rs
ChessApp/src/RustMacros/hlcd/src/component/: interface_impl.rs  private_impl.rs  provided_interface.rs  required_interface.rs  state_part.rs
ChessApp/src/RustMacros/hlcd_infra/: Cargo.toml
ChessApp/src/RustMacros/hlcd_infra/src/: console_app_interface.rs  console_io_interface.rs  file_io_interface.rs  lib.rs
ChessApp/src/RustMacros/hlcd_macro_internals/: Cargo.toml
ChessApp/src/RustMacros/hlcd_macro_internals/src/: component.rs  hlcd.rs  interface.rs  lib.rs
ChessApp/src/RustMacros/hlcd_macro_internals/src/component/: child_component.rs  interface_impl.rs  private_impl.rs  requires_section.rs
ChessApp/src/RustMacros/hlcd_macro_internals/src/hlcd/: component.rs  interface.rs
ChessApp/src/RustMacros/hlcd_macros/: Cargo.toml
ChessApp/src/RustMacros/hlcd_macros/src/: interface.rs  interface_definition.rs  lib.rs
ChessApp/src/RustMacros/nom_extensions/: Cargo.toml
ChessApp/src/RustMacros/nom_extensions/src/: parseable.rs
ChessApp/src/RustMacros/src/: chess_app.rs  main.rs  nom_extensions.rs
ChessApp/src/RustMacros/src/chess_app/: ai_player.rs  console_ui.rs  data.rs  file_storage.rs  game_flow.rs  player_interface.rs  rules_engine.rs  storage_interface.rs
ChessApp/src/RustMacros/src/chess_app/console_ui/: board_printer.rs  (+4 more)
(+284 files in other folders)
