[package]
name = "chess_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hlcd_macros = { path = "hlcd_macros" }
hlcd_infra = { path = "hlcd_infra" }
lazy_static = "1.4.0"
readonly = "0.2.2"
colored = "2.0.0"
enum-iterator = "0.8.1"
nom = "7.1.1"
wildmatch = "2.1.1"
serde = { version = "1.0.147", features = ["derive"]} 
serde_json = "1.0.87"
strum = { version = "0.24", features = ["derive"] }